feat: tag list done
